Add default processor setting
